# blitz-money

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bindings.json  layout.epgz
langs/: .en_US.json.swo  en_US.json
src/: MainWindow.ui.qml  ManageAccountsWindow.ui.qml  bindings.json  gui.cpp  gui.h  gui.rs  i18n.rs  lib.rs  main.cpp  main.rs  qml.qrc  qtbindings.cpp  qtbindings.h  qtbindingsimplementation.rs  qtbindingsinterface.rs
src/backend/: accounts.rs  calendar.rs  contacts.rs  example.bms  forecasts.rs  import.rs  import_csv.rs  import_ofx.rs  mod.rs  mods.rs  movimentations.rs  ofx.rs  rules.rs  storage.rs  tags.rs  transactions.rs
src/src/: gui.rs  qtbindings.cpp  qtbindings.h  qtbindings.rs
src/ui/: EditAccountWindow.ui.qml  MainWindow.ui.qml  ManageAccountsWindow.ui.qml  accounts.rs  contacts.rs  forecasts.rs  mod.rs  movimentations.rs  qml.qrc  rules.rs  tags.rs  transactions.rs  ui.rs
tests/: accounts_tests.rs
