
[package]
name = "bmoney"
description = "Blitz Money - Application for personal financial control"
repository = "https://github.com/fernandobatels/blitz-money"
homepage = "https://github.com/fernandobatels/blitz-money"
version = "0.1.3"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]

[dependencies]
json = "*"
xmltree = "*"
uuid = { version = "0.7", features = ["v4"] }
prettytable-rs = "*"
chrono = "*"
csv = "*"
assert_cmd = "*"
dirs = "*"
lazy-static-include = "*"
lazy_static = "*"
json-gettext = "*"
icalendar = { git = "https://github.com/fernandobatels/icalendar-rs", version = "*" }
